[package]
name = "munchkin-sale-wasm"
version = "0.0.1"
authors = [ "Munchkin token",]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.munchkin-sale]
features = [ "wasm-output-mode",]
path = ".."

[dependencies.elrond-wasm-output]
version = "0.18.2"
features = [ "wasm-output-mode",]
